feat: Adjust button size in SectionsComponent for improved UI consistency

--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -49,7 +49,7 @@
                                                             <ngb-highlight [result]="data.name" [term]="searchTerm"></ngb-highlight>
                                                         </td>
                                                         <td>
-                                                            <button type="button" class="btn btn-light"><i class="ri-pencil-fill align-bottom text-muted"></i>  Edit</button>
+                                                            <button type="button" class="btn btn-sm btn-light"><i class="ri-pencil-fill align-bottom text-muted"></i>  Edit</button>
                                                         </td>
                                                     </tr>
                                                     }
