--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -16,7 +16,7 @@
                                 <div class="card" id="ticketsList">
                                     <div class="card-header border-0">
                                         <div class="d-flex align-items-center">
-                                            <h5 class="card-title mb-0 flex-grow-1">Class Sections</h5>
+                                            <h5 class="card-title mb-0 flex-grow-1"><i class="ri-artboard-line text-muted fs-18 align-middle me-1">   </i>Class Sections</h5>
                                             <div class="flex-shrink-0  hstack gap-2">
                                                 <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Section</button>
                                             </div>
