refactor: Update pagination service and improve table structure in institution and sections components

--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -27,10 +27,11 @@
             </div>
             <div class="card-body">
                 <div>
-                    <div class="table-responsive table-card mb-1">
-                        <table class="table">
-                            <thead class="table-light text-muted">
+                    <div class="table-responsive">
+                        <table class="table table-gridjs">
+                            <thead>
                                 <tr>
+                                    <th>SN</th>
                                     <th class="sort" (click)="onSort('code')">Code</th>
                                     <th class="sort" (click)="onSort('name')">Name</th>
                                     <th class="sort" (click)="onSort('isActive')">Status</th>
@@ -40,6 +41,7 @@
                             <tbody>
                                 @for( data of institutionListCopy; track $index){
                                 <tr id="c_{{data.id}}">
+                                    <td>{{$index + 1}}</td>
                                     <td>
                                         <ngb-highlight [result]="data.code" [term]="searchTerm"></ngb-highlight>
                                     </td>
@@ -58,12 +60,12 @@
                     <div class="row justify-content-md-between align-items-md-center">
                         <div class="col col-sm-5">
                             <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                                Showing {{service.startIndex}} to {{service.endIndex}} of {{institutionList?.length ?? 0}} entries
+                                {{institutionList?.length ?? 0}} Records
                             </div>
                         </div>
                         <div class="col col-sm-5">
                             <div class="text-sm-right float-sm-end listjs-pagination">
-                                <ngb-pagination [collectionSize]="institutionList?.length" [(page)]="service.page" [pageSize]="service.pageSize" (pageChange)="changePage()">
+                                <ngb-pagination [collectionSize]="institutionList?.length" [ellipses]="true" [maxSize]="5" [boundaryLinks]="true" [(page)]="service.page" [pageSize]="service.pageSize" (pageChange)="changePage()">
                                 </ngb-pagination>
                             </div>
                         </div>
