--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -35,43 +35,42 @@
                                         </div>
                                     </div>
                                     <div class="card-body">
-                                        <div class="table-responsive table-card mb-3">
-                                            <table class="table align-middle table-nowrap mb-0" id="ticketTable">
-                                                <thead class="table-light text-muted">
+                                        <div class="table-responsive">
+                                            <table class="table table-gridjs" id="classSectionsTable">
+                                                <thead>
                                                     <tr>
+                                                        <th>SN</th>
                                                         <th class="sort" (click)="onSort('name')">Name</th>
-                                                        <th class="sort">Action</th>
+                                                        <th>Action</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="list form-check-all" id="ticket-list-data">
                                                     @for ( data of classSectionsCopy; track $index) {
                                                     <tr id="t_{{data._id}}">
+                                                        <td>{{ $index + 1 }}</td>
                                                         <td>
                                                             <ngb-highlight [result]="data.name" [term]="searchTerm"></ngb-highlight>
                                                         </td>
                                                         <td>
-                                                            <button type="button" class="btn btn-sm btn-light" (click)="editModal(content, data.id)"><i class="ri-pencil-fill align-bottom text-muted"></i>  Edit</button>
+                                                            <button type="button" class="btn btn-sm btn-light" (click)="editModal(content, data.id)"><i class="ri-pencil-fill align-bottom text-muted"></i></button>
                                                         </td>
                                                     </tr>
                                                     }
                                                 </tbody>
                                             </table>
                                         </div>
-
                                         <div class="row justify-content-md-between align-items-md-center">
                                             <div class="col col-sm-5">
                                                 <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                                                    Showing {{paginationService.startIndex}} to {{paginationService.endIndex}} of {{classSections?.length ?? 0}} entries
+                                                    {{classSections?.length ?? 0}} Records
                                                 </div>
                                             </div>
                                             <div class="col col-sm-5">
-                                                <div class="text-sm-right float-sm-end listjs-pagination">
-                                                    <ngb-pagination [collectionSize]="classSections?.length" [(page)]="paginationService.page" [pageSize]="paginationService.pageSize" (pageChange)="changePage()">
-                                                    </ngb-pagination>
+                                                <div class="text-sm-right float-sm-end listjs-pagination gap-2">
+                                                    <ngb-pagination [collectionSize]="classSections?.length" [ellipses]="true" [maxSize]="5" [boundaryLinks]="true" [(page)]="paginationService.page" [pageSize]="paginationService.pageSize" (pageChange)="changePage()"></ngb-pagination>
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
