refactor: Enhance table styling in institution and sections components for better usability

--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -36,7 +36,7 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="table-responsive">
-                                            <table class="table table-gridjs" id="classSectionsTable">
+                                            <table class="table table-hover table-striped table-gridjs" id="classSectionsTable">
                                                 <thead>
                                                     <tr>
                                                         <th>SN</th>
