--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div>
                     <div class="table-responsive">
-                        <table class="table table-gridjs">
+                        <table class="table table-hover table-striped table-gridjs">
                             <thead>
                                 <tr>
                                     <th>SN</th>
