--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -14,13 +14,15 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="card" id="classSectionList">
-                                    <div class="row g-4 align-items-center">
-                                        <div class="col-sm">
-                                            <div><h5 class="card-title mb-0 flex-grow-1"><i class="ri-artboard-line text-muted fs-18 align-middle me-1">   </i>Class Sections</h5></div>
-                                        </div>
-                                        <div class="col-sm-auto">
-                                            <div class="d-flex flex-wrap align-items-start gap-2">
-                                                <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Section</button>
+                                    <div  class="card-header border-bottom-dashed">
+                                        <div class="row g-4 align-items-center">
+                                            <div class="col-sm">
+                                                <div><h5 class="card-title mb-0 flex-grow-1"><i class="ri-artboard-line text-muted fs-18 align-middle me-1">   </i>Class Sections</h5></div>
+                                            </div>
+                                            <div class="col-sm-auto">
+                                                <div class="d-flex flex-wrap align-items-start gap-2">
+                                                    <button class="btn btn-primary add-btn" data-bs-toggle="modal" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Section</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
