--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -62,10 +62,10 @@
                                         <div class="row justify-content-md-between align-items-md-center">
                                             <div class="col col-sm-5">
                                                 <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                                                    item
+                                                    <!-- item
                                                     {{paginationService.startIndex}} to
                                                     {{paginationService.endIndex}} of {{classSections?.length ?? 0}}
-                                                    items
+                                                    items -->
                                                 </div>
                                             </div>
                                             <div class="col col-sm-5">
